Progress on simple renderer

--- a/bin/index.html
+++ b/bin/index.html
@@ -1,7 +1,7 @@
 <html>
     <head></head>
     <body>
-        <canvas id="canvas"></canvas>
+        <canvas id="canvas" width="500px" height="500px"></canvas>
         <script src="./test-page.js"></script>
     </body>
 </html>
