--- a/bin/index.html
+++ b/bin/index.html
@@ -1,8 +1,9 @@
 <html>
     <head></head>
     <body>
-        <div id="buttons"></div>
-        <canvas id="canvas"></canvas>
-        <script src="./test-page.js"></script>
+        <ul>
+            <li><a href='./minimal.html'>Minimal</a></li>
+            <li><a href='./symbol-explorer.html'>Symbol explorer</a></li>
+        </ul>
     </body>
 </html>
