DOM rendering example

--- a/bin/index.html
+++ b/bin/index.html
@@ -5,6 +5,7 @@
             <li><a href='./minimal.html'>Minimal</a></li>
             <li><a href='./dynamic-content.html'>Dynamic content</a></li>
             <li><a href='./symbol-explorer.html'>Symbol explorer</a></li>
+            <li><a href='./dom.html'>DOM</a></li>
         </ul>
     </body>
 </html>
