--- a/bin/dom.html
+++ b/bin/dom.html
@@ -18,13 +18,19 @@
                 position: absolute;
                 left: 50%;
                 top: 50%;
+                filter: drop-shadow(0px 12px 5px rgba(0, 0, 0, 0.5));
             }
             form{
                 background-color: rgba(255, 255, 255, 0.4);
                 box-shadow: none;
             }
-            input, button{
+            form input, form button{
                 width: 100%;
+            }
+            #controls{
+                position: fixed;
+                bottom: 0;
+                left: 10px;
             }
         </style>
     </head>
@@ -35,9 +41,13 @@
                 <input type="text"/>
                 <label>Address</label>
                 <input type="text"/>
-                <button width="100%">Submit</button>
+                <button>Submit</button>
             </form>
             <div id="anim" />
+        </div>
+        <div id="controls">
+            <button id="btn-swap">Swap Gun</button>
+            <button id="btn-pause">Pause</button>
         </div>
         <script src="./dom.js"></script>
     </body>
