--- a/bin/index.html
+++ b/bin/index.html
@@ -6,6 +6,7 @@
             <li><a href='./dynamic-content.html'>Dynamic content</a></li>
             <li><a href='./symbol-explorer.html'>Symbol explorer</a></li>
             <li><a href='./dom.html'>DOM</a></li>
+            <li><a href='./mouse-interaction.html'>Mouse interaction</a></li>
         </ul>
     </body>
 </html>
