--- a/dist-examples/dom/index.html
+++ b/dist-examples/dom/index.html
@@ -1,1 +1,55 @@
-<html><head><script type="module" src="/minimal/index.f6f6dd79.js"></script><link rel="stylesheet" href="https://unpkg.com/mvp.css@1.8.0/mvp.css"><style>body{margin:0;padding:0}#container{align-items:center;background-color:rgba(0,0,0,.1);display:flex;height:100vh;justify-content:center;width:100vw}#anim{filter:drop-shadow(0 12px 5px rgba(0,0,0,.5));left:50%;position:absolute;top:50%}form{background-color:hsla(0,0%,100%,.4);box-shadow:none}form button,form input{width:100%}#controls{bottom:0;left:10px;position:fixed}</style></head><body> <div id="container"> <form> <label>Name</label> <input type="text"> <label>Address</label> <input type="text"> <button>Submit</button> </form> <div id="anim"> </div> <div id="controls"> <button id="btn-swap">Swap Gun</button> <button id="btn-pause">Pause</button> </div> <script src="/dom/index.356b9189.js" type="module"></script> </div></body></html>
+<html>
+    <head>
+        <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.8.0/mvp.css"> 
+        <style>
+            body{
+                padding: 0;
+                margin: 0;
+            }
+            #container{
+                width:100vw;
+                height: 100vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: rgba(0, 0, 0, 0.1);
+            }
+            #anim{
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                filter: drop-shadow(0px 12px 5px rgba(0, 0, 0, 0.5));
+            }
+            form{
+                background-color: rgba(255, 255, 255, 0.4);
+                box-shadow: none;
+            }
+            form input, form button{
+                width: 100%;
+            }
+            #controls{
+                position: fixed;
+                bottom: 0;
+                left: 10px;
+            }
+        
+</style>
+    </head>
+    <body>
+        <div id="container">
+            <form>
+                <label>Name</label>
+                <input type="text">
+                <label>Address</label>
+                <input type="text">
+                <button>Submit</button>
+            </form>
+            <div id="anim">
+        </div>
+        <div id="controls">
+            <button id="btn-swap">Swap Gun</button>
+            <button id="btn-pause">Pause</button>
+        </div>
+        <script src="/dom/index.ffcc60f3.js" defer=""></script>
+    </div></body>
+</html>
