--- a/dist-examples/index.html
+++ b/dist-examples/index.html
@@ -1,1 +1,12 @@
-<html><head></head><body> <ul> <li><a href="/minimal/index.html">Minimal</a></li> <li><a href="/dynamic-content/index.html">Dynamic content</a></li> <li><a href="/symbol-explorer/index.html">Symbol explorer</a></li> <li><a href="/mouse-interaction/index.html">Mouse interaction</a></li> <li><a href="/dom/index.html">DOM</a></li> </ul> </body></html>
+<html>
+    <head></head>
+    <body>
+        <ul>
+            <li><a href="/minimal/index.html">Minimal</a></li>
+            <li><a href="/dynamic-content/index.html">Dynamic content</a></li>
+            <li><a href="/symbol-explorer/index.html">Symbol explorer</a></li>
+            <li><a href="/mouse-interaction/index.html">Mouse interaction</a></li>
+            <li><a href="/dom/index.html">DOM</a></li>
+        </ul>
+    <script src="/examples.ade1ed73.js"></script></body>
+</html>
