--- a/dist-examples/symbol-explorer/index.html
+++ b/dist-examples/symbol-explorer/index.html
@@ -1,1 +1,8 @@
-<html><head><script type="module" src="/minimal/index.bd15c84a.js"></script><script type="module" src="/minimal/index.f6f6dd79.js"></script></head><body> <div id="buttons"></div> <canvas id="canvas"></canvas> <script src="/symbol-explorer/index.839f0d87.js" type="module"></script> </body></html>
+<html>
+    <head></head>
+    <body>
+        <div id="buttons"></div>
+        <canvas id="canvas"></canvas>
+        <script src="/symbol-explorer/index.d22ba77f.js" defer=""></script>
+    </body>
+</html>
