--- a/examples/minimal/index.html
+++ b/examples/minimal/index.html
@@ -6,10 +6,19 @@
                 padding: 0;
                 margin: 0;
             }
+            .container{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
         </style>
     </head>
     <body>
-        <canvas id="canvas"></canvas> 
+        <div class="container">
+            <canvas id="canvas"></canvas>
+        </div> 
         <script src="./minimal.ts" type="module"></script>
     </body>
 </html>
