--- a/examples/index.html
+++ b/examples/index.html
@@ -2,6 +2,7 @@
     <head></head>
     <body>
         <ul>
+            <li><a href='./web-component/index.html'>Web component</a></li>
             <li><a href='./minimal/index.html'>Minimal</a></li>
             <li><a href='./dynamic-content/index.html'>Dynamic content</a></li>
             <li><a href='./symbol-explorer/index.html'>Symbol explorer</a></li>
