--- a/examples/web-component/index.html
+++ b/examples/web-component/index.html
@@ -7,16 +7,9 @@
                 padding: 0;
                 margin: 0;
             }
-            .container{
-                width: 100%;
-                height: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
         </style>
     </head>
     <body>
-        <anim-cc path='../assets/test' width="600px" height="600px" background-color="red" lerp/>
+        <anim-cc path='../assets/test' width="600" height="600" background-color="red" lerp object-fit="contain"/>
     </body>
 </html>
