scale-down object fit

--- a/examples/web-component/index.html
+++ b/examples/web-component/index.html
@@ -10,6 +10,6 @@
         </style>
     </head>
     <body>
-        <anim-cc path='../assets/test' width="600" height="600" background-color="red" lerp object-fit="contain"/>
+        <anim-cc path='../assets/test' width="600" height="600" background-color="red" object-fit="scale-down" lerp/>
     </body>
 </html>
