--- a/examples/web-component/index.html
+++ b/examples/web-component/index.html
@@ -10,6 +10,6 @@
         </style>
     </head>
     <body>
-        <anim-cc path='../assets/test/' clip="Scene" stage-width="600" stage-height="600" origin-x="0.5" origin-y="0.5" background-color="red" object-fit="contain" lerp/>
+        <anim-cc path='../assets/test/' clip="Scene" stage-width="600" stage-height="600" scale="1" origin-x="0.5" origin-y="0.5" background-color="red" object-fit="contain" lerp/>
     </body>
 </html>
