dpr and resolution attributes

--- a/examples/web-component/index.html
+++ b/examples/web-component/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.8.0/mvp.css"/> 
-        <script src="../../src/index.ts" type="module"></script>
+        <script src="./index.ts" type="module"></script>
         <style>
             body{
                 padding: 0;
@@ -10,6 +10,6 @@
         </style>
     </head>
     <body>
-        <anim-cc path='../assets/test/' clip="Scene" stage-width="600" stage-height="600" scale="1" origin-x="0.5" origin-y="0.5" background-color="red" object-fit="contain" lerp/>
+        <anim-cc path='../assets/test/' clip="Scene" stage-width="550" stage-height="310" scale="1" origin-x="0.5" origin-y="0.5" background-color="red" object-fit="contain" lerp/>
     </body>
 </html>
