Update Netlify toml

--- a/examples/web-component/index.html
+++ b/examples/web-component/index.html
@@ -10,6 +10,8 @@
         </style>
     </head>
     <body>
-        <anim-cc path='../assets/test/' clip="Scene" stage-width="550" stage-height="310" scale="1" origin-x="0.5" origin-y="0.5" background-color="red" object-fit="contain" lerp/>
+        <anim-cc path='../assets/test/' clip="Scene" stage-width="550" stage-height="310" origin-x="0.5" origin-y="0.5" />
+        <!-- Full attributes below -->
+        <!-- <anim-cc path='../assets/test/' resolution="1" clip="Scene" stage-width="550" stage-height="310" scale="1" origin-x="0.5" origin-y="0.5" background-color="red" object-fit="contain" lerp/> -->
     </body>
 </html>
