--- a/examples/web-component/index.html
+++ b/examples/web-component/index.html
@@ -6,6 +6,9 @@
             body{
                 padding: 0;
                 margin: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
         </style>
     </head>
